# rust-parallel

./: Cargo.toml
src/: main.rs
