[package]
name = "rust-parallel"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
num = "0.4.3"

[dependencies.clap]
version = "4.5.31"
features = ["derive"]

[dependencies.ndarray]
version = "0.16.1"

[dependencies.rayon]
version = "1.10.0"
optional = true

[features]
default = ["rayon"]
rayon = ["dep:rayon", "ndarray/rayon"]
